Perkin-UAT/force-app/main/default/objects/Contract/fields/Accountwide_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Accountwide_Contract_Status__c</fullName>
    <label>Accountwide Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PKI Review</fullName>
            </value>
            <value>
                <fullName>Customer Review</fullName>
            </value>
            <value>
                <fullName>Hardcopy Received</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>