Perkin-UAT/force-app/main/default/objects/Contract/fields/Alert_Batch_Run__c.field-meta.xml
<CustomField>
    <fullName>Alert_Batch_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is using in the alert mechanism batch.</description>
    <label>Alert Batch Run</label>
    <type>Checkbox</type>
</CustomField>