Perkin-UAT/force-app/main/default/objects/Contract/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <label>Annual Revenue</label>
    <length>12</length>
    <type>Text</type>
</CustomField>