Perkin-UAT/force-app/main/default/objects/Contract/fields/Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Volume__c</fullName>
    <label>Annual Volume</label>
    <length>10</length>
    <type>Text</type>
</CustomField>