Perkin-UAT/force-app/main/default/objects/Contract/fields/B2B_url_link__c.field-meta.xml
<CustomField>
    <fullName>B2B_url_link__c</fullName>
    <label>B2B url link</label>
    <type>Url</type>
</CustomField>