Perkin-UAT/force-app/main/default/objects/Contract/fields/Billing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Billing_Plan__c</fullName>
    <label>Billing Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yearly</fullName>
                <default>true</default>
                <label>Yearly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>