Perkin-UAT/force-app/main/default/objects/Contract/fields/Biobar_Agreement_No__c.field-meta.xml
<CustomField>
    <fullName>Biobar_Agreement_No__c</fullName>
    <label>Biobar Agreement No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>