Perkin-UAT/force-app/main/default/objects/Contract/fields/Bundled_Support_Days__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Support_Days__c</fullName>
    <formula>if(ISPICKVAL( Plan_Type__c , &quot;Enhanced&quot;),2,if(ISPICKVAL( Plan_Type__c , &quot;Premier&quot;),5,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundled Support Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>