Perkin-UAT/force-app/main/default/objects/Contract/fields/Contract_Admin__c.field-meta.xml
<CustomField>
    <fullName>Contract_Admin__c</fullName>
    <label>Contract Admin</label>
    <length>20</length>
    <type>Text</type>
</CustomField>