Perkin-UAT/force-app/main/default/objects/Contract/fields/Contract_Description__c.field-meta.xml
<CustomField>
    <fullName>Contract_Description__c</fullName>
    <label>Contract Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>