Perkin-UAT/force-app/main/default/objects/Contract/fields/Contract_Time_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Contract_Time_Trigger__c</fullName>
    <label>Contract Time Trigger</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>