Perkin-UAT/force-app/main/default/objects/Contract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Warr/Renew/Restart</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Restart</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
                <default>true</default>
                <label>Warranty</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>