Perkin-UAT/force-app/main/default/objects/Contract/fields/Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value__c</fullName>
    <label>Contract Value</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>