Perkin-UAT/force-app/main/default/objects/Contract/fields/Count_of_co_term_quotes__c.field-meta.xml
<CustomField>
    <fullName>Count_of_co_term_quotes__c</fullName>
    <description>To track number of co-term quote under this contract(Source: INC0311314)</description>
    <inlineHelpText>Number of co-term quote</inlineHelpText>
    <label>Count of co-term quotes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>