Perkin-UAT/force-app/main/default/objects/Contract/fields/eProcurement_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>eProcurement_Acceptance_Date__c</fullName>
    <label>eProcurement Acceptance Date</label>
    <type>Date</type>
</CustomField>