Perkin-UAT/force-app/main/default/objects/Contract/fields/eProcurement_Catalog_Channel_Contracts__c.field-meta.xml
<CustomField>
    <fullName>eProcurement_Catalog_Channel_Contracts__c</fullName>
    <label>eProcurement Catalog Channel Contracts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SciQuest</fullName>
            </value>
            <value>
                <fullName>Ariba</fullName>
            </value>
            <value>
                <fullName>Hubwoo</fullName>
            </value>
            <value>
                <fullName>Perfect Commerce</fullName>
            </value>
            <value>
                <fullName>GHX</fullName>
            </value>
            <value>
                <fullName>Intramalls</fullName>
            </value>
            <value>
                <fullName>Customer Specific</fullName>
            </value>
            <value>
                <fullName>ePlus</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>