Perkin-UAT/force-app/main/default/objects/Contract/fields/eProcurement_Start_Date_Contracts__c.field-meta.xml
<CustomField>
    <fullName>eProcurement_Start_Date_Contracts__c</fullName>
    <label>eProcurement Start Date Contracts</label>
    <type>Date</type>
</CustomField>