Perkin-UAT/force-app/main/default/objects/Contract/fields/eProcurement_submit_date_contracts__c.field-meta.xml
<CustomField>
    <fullName>eProcurement_submit_date_contracts__c</fullName>
    <label>eProcurement submit date contracts</label>
    <type>Date</type>
</CustomField>