Perkin-UAT/force-app/main/default/objects/Contract/fields/Last_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Revenue__c</fullName>
    <description>If a renewal, this is the revenue generated in the previous term under this contract</description>
    <label>Last Year Revenue</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>