Perkin-UAT/force-app/main/default/objects/Contract/fields/Line_Items_Before_Update__c.field-meta.xml
<CustomField>
    <fullName>Line_Items_Before_Update__c</fullName>
    <label># Line Items Before Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>