Perkin-UAT/force-app/main/default/objects/Contract/fields/Master_Contract__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Merged Child Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>