Perkin-UAT/force-app/main/default/objects/Contract/fields/Master_Contract_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Contract(merged)</label>
    <type>Checkbox</type>
</CustomField>