Perkin-UAT/force-app/main/default/objects/Contract/fields/Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Object_ID__c</fullName>
    <label>Object ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>