Perkin-UAT/force-app/main/default/objects/Contract/fields/Old_or_Test_Record__c.field-meta.xml
<CustomField>
    <fullName>Old_or_Test_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old or Test Record</label>
    <type>Checkbox</type>
</CustomField>