Perkin-UAT/force-app/main/default/objects/Contract/fields/OnSupport__c.field-meta.xml
<CustomField>
    <fullName>OnSupport__c</fullName>
    <formula>if( EndDate  &gt;  TODAY() , image(&quot;https://na1.salesforce.com/servlet/servlet.FileDownload?file=01530000000OQuw&quot;,&quot;Green&quot;), image(&quot;https://na1.salesforce.com/servlet/servlet.FileDownload?file=01530000000P5wZ&quot;,&quot;Red&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OnSupport</label>
    <type>Text</type>
</CustomField>