Perkin-UAT/force-app/main/default/objects/Contract/fields/PA_Approve_Date__c.field-meta.xml
<CustomField>
    <fullName>PA_Approve_Date__c</fullName>
    <label>PA Approve Date</label>
    <type>Date</type>
</CustomField>