Perkin-UAT/force-app/main/default/objects/Contract/fields/PA_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>PA_Release_Date__c</fullName>
    <label>PA Release Date</label>
    <type>Date</type>
</CustomField>