Perkin-UAT/force-app/main/default/objects/Contract/fields/PA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PA_Start_Date__c</fullName>
    <label>PA Start Date</label>
    <type>Date</type>
</CustomField>