Perkin-UAT/force-app/main/default/objects/Contract/fields/Pac_Code_Items_After_Update__c.field-meta.xml
<CustomField>
    <fullName>Pac_Code_Items_After_Update__c</fullName>
    <label># Pac Code Items After Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>