Perkin-UAT/force-app/main/default/objects/Contract/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>AMS</fullName>
            </value>
            <value>
                <fullName>ANP</fullName>
            </value>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>ARS</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>CHS</fullName>
            </value>
            <value>
                <fullName>CLH</fullName>
            </value>
            <value>
                <fullName>CLR</fullName>
            </value>
            <value>
                <fullName>CRD</fullName>
            </value>
            <value>
                <fullName>CSA</fullName>
            </value>
            <value>
                <fullName>DIA</fullName>
            </value>
            <value>
                <fullName>DNA</fullName>
            </value>
            <value>
                <fullName>ESS</fullName>
            </value>
            <value>
                <fullName>FAP</fullName>
            </value>
            <value>
                <fullName>FLR</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>GSAE</fullName>
            </value>
            <value>
                <fullName>GSLE</fullName>
            </value>
            <value>
                <fullName>HCS</fullName>
            </value>
            <value>
                <fullName>HMG</fullName>
            </value>
            <value>
                <fullName>HTS</fullName>
            </value>
            <value>
                <fullName>IAS</fullName>
            </value>
            <value>
                <fullName>ICP</fullName>
            </value>
            <value>
                <fullName>ILB</fullName>
            </value>
            <value>
                <fullName>INV</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
            <value>
                <fullName>LCA</fullName>
            </value>
            <value>
                <fullName>LCM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>