Perkin-UAT/force-app/main/default/objects/Contract/fields/Quote_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>