Perkin-UAT/force-app/main/default/objects/Contract/fields/Quote_Total__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total__c</fullName>
    <description>Total value of SAP Quote</description>
    <label>Quote Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>