Perkin-UAT/force-app/main/default/objects/Contract/fields/Quote_Validity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validity_End_Date__c</fullName>
    <label>Quote Validity End Date</label>
    <type>Date</type>
</CustomField>