Perkin-UAT/force-app/main/default/objects/Contract/fields/Quote_Validity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validity_Start_Date__c</fullName>
    <label>Quote Validity Start Date</label>
    <type>Date</type>
</CustomField>