Perkin-UAT/force-app/main/default/objects/Contract/fields/SAP_Deal_Number_del__c.field-meta.xml
<CustomField>
    <fullName>SAP_Deal_Number_del__c</fullName>
    <label>SAP Deal Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>