Perkin-UAT/force-app/main/default/objects/Contract/fields/SAP_Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>SAP_Deal_Status__c</fullName>
    <label>SAP Deal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Negotiations with customer</fullName>
            </value>
            <value>
                <fullName>Submitted for approval</fullName>
            </value>
            <value>
                <fullName>Approved - In Customer Care</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>