Perkin-UAT/force-app/main/default/objects/Contract/fields/SAP_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_Date__c</fullName>
    <inlineHelpText>Date order booked in SAP. Not the contract start date</inlineHelpText>
    <label>SAP Order Date</label>
    <type>Date</type>
</CustomField>