Perkin-UAT/force-app/main/default/objects/Contract/fields/SAP_Quote_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_Quote_No__c</fullName>
    <label>SAP Quote Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>