Perkin-UAT/force-app/main/default/objects/Contract/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASLS_Reagents</fullName>
            </value>
            <value>
                <fullName>ASLS_Instruments</fullName>
            </value>
            <value>
                <fullName>ASLS_Consumables</fullName>
            </value>
            <value>
                <fullName>LST_Reagents</fullName>
            </value>
            <value>
                <fullName>LST_Instruments</fullName>
            </value>
            <value>
                <fullName>LST_Consumables</fullName>
            </value>
            <value>
                <fullName>GS_Reagents</fullName>
            </value>
            <value>
                <fullName>GS_Instruments</fullName>
            </value>
            <value>
                <fullName>GS_Consumables</fullName>
            </value>
            <value>
                <fullName>SDx_Reagents</fullName>
            </value>
            <value>
                <fullName>SDx_Instruments</fullName>
            </value>
            <value>
                <fullName>SDx_Consumables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>