Perkin-UAT/force-app/main/default/objects/Contract/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NORTH AMERICA</fullName>
            </value>
            <value>
                <fullName>SOUTH AMERICA</fullName>
            </value>
            <value>
                <fullName>WESTERN EUROPE</fullName>
            </value>
            <value>
                <fullName>EASTERN EUROPE</fullName>
            </value>
            <value>
                <fullName>MIDDLE EAST</fullName>
            </value>
            <value>
                <fullName>AFRICA</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>KOSEA</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>