Perkin-UAT/force-app/main/default/objects/Contract/recordTypes/Accountwide_Contract.recordType-meta.xml
<RecordType>
    <fullName>Accountwide_Contract</fullName>
    <active>true</active>
    <description>This record type is to maintain Administration Agreements for Reagent Biobars/Accountwide contracts.</description>
    <label>Accountwide Contract</label>
</RecordType>