Perkin-UAT/force-app/main/default/objects/Contract/recordTypes/LABWORKSSMA.recordType-meta.xml
<RecordType>
    <fullName>LABWORKSSMA</fullName>
    <active>true</active>
    <description>Annual Software Maintenance Agreement for LABWORKS LIMS</description>
    <label>LABWORKS SMA</label>
</RecordType>