Perkin-UAT/force-app/main/default/objects/Contract/recordTypes/ReagentBioBar.recordType-meta.xml
<RecordType>
    <fullName>ReagentBioBar</fullName>
    <active>true</active>
    <description>Administration Agreements for Reagent Biobars at Accounts</description>
    <label>Reagent BioBar</label>
</RecordType>