Perkin-UAT/force-app/main/default/objects/Contract/recordTypes/SAPDeal.recordType-meta.xml
<RecordType>
    <fullName>SAPDeal</fullName>
    <active>true</active>
    <description>This record type is for preferred pricing contract setup in SAP</description>
    <label>SAP Deal</label>
</RecordType>