Perkin-UAT/force-app/main/default/objects/Contract/recordTypes/ServiceContract.recordType-meta.xml
<RecordType>
    <fullName>ServiceContract</fullName>
    <active>true</active>
    <description>Service contract for installed equipment</description>
    <label>Service Contract</label>
</RecordType>