Perkin-UAT/force-app/main/default/objects/Contract/listViews/ActivatedContracts.listView-meta.xml
<ListView>
    <fullName>ActivatedContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.RECORDTYPE</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Product_Line__c</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS_CODE</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>notEqual</operation>
        <value>Expired</value>
    </filters>
    <label>Active Contracts</label>
</ListView>