Perkin-UAT/force-app/main/default/objects/Contract/listViews/AllInApprovalContracts.listView-meta.xml
<ListView>
    <fullName>AllInApprovalContracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.RECORDTYPE</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS_CODE</field>
        <operation>equals</operation>
        <value>P</value>
    </filters>
    <label>All In Approval Contracts</label>
    <language>en_US</language>
</ListView>