Perkin-UAT/force-app/main/default/objects/Contract/listViews/CA10BioBARAgreements.listView-meta.xml
<ListView>
    <fullName>CA10BioBARAgreements</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.RECORDTYPE</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.ReagentBioBar</value>
    </filters>
    <filters>
        <field>CONTRACT.BILLING_COUNTRY</field>
        <operation>equals</operation>
        <value>CA</value>
    </filters>
    <label>CA10 BioBAR Agreements</label>
    <language>en_US</language>
    <sharedTo />
</ListView>