Perkin-UAT/force-app/main/default/objects/Contract/listViews/Contracts_relationship_to_accounts.listView-meta.xml
<ListView>
    <fullName>Contracts_relationship_to_accounts</fullName>
    <columns>CONTRACT.RECORDTYPE</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Notes__c</columns>
    <columns>Scope__c</columns>
    <columns>SAP_Deal_Status__c</columns>
    <columns>CONTRACT.SHIPPING_STATE</columns>
    <columns>CONTRACT.SHIPPING_COUNTRY</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.Accountwide_Contract,Contract.SAPDeal</value>
    </filters>
    <label>Contracts relationship to accounts</label>
    <language>en_US</language>
</ListView>