Perkin-UAT/force-app/main/default/objects/Contract/listViews/Expired_Contracts.listView-meta.xml
<ListView>
    <fullName>Expired_Contracts</fullName>
    <columns>SAP_Contract_Number__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.LABWORKSSMA</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <label>Expired Contracts</label>
    <language>en_US</language>
    <sharedTo>
        <group>ARQ_000956</group>
    </sharedTo>
</ListView>