Perkin-UAT/force-app/main/default/objects/Contract/listViews/Gloria.listView-meta.xml
<ListView>
    <fullName>Gloria</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Gloria</label>
    <language>en_US</language>
</ListView>