Perkin-UAT/force-app/main/default/objects/Contract/listViews/LABWORKSExpiredSMAs.listView-meta.xml
<ListView>
    <fullName>LABWORKSExpiredSMAs</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Support_ID__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Asset__c</columns>
    <columns>SAP_Contract_Number__c</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>Plan_Type__c</columns>
    <columns>Contract_Value__c</columns>
    <columns>Contract_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.LABWORKSSMA</value>
    </filters>
    <filters>
        <field>CONTRACT.END_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_FISCAL_QUARTERS:3</value>
    </filters>
    <label>SMAs Expiring This Fiscal Quarter</label>
    <language>en_US</language>
</ListView>