Perkin-UAT/force-app/main/default/objects/Contract/listViews/Matt_s_Active_Deals_11_22_16.listView-meta.xml
<ListView>
    <fullName>Matt_s_Active_Deals_11_22_16</fullName>
    <booleanFilter>(1 OR 2) AND (3 OR 4) AND 5</booleanFilter>
    <columns>SAP_Deal_Number_del__c</columns>
    <columns>eProcurement_Catalog_Type_Contracts__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>SAP_Deal_Status__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Annual_Revenue__c</columns>
    <columns>PA_Approve_Date__c</columns>
    <columns>Line_Items_After_Update__c</columns>
    <columns>Pac_Code_Items_After_Update__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <filters>
        <field>SAP_Deal_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>CONTRACT.SHIPPING_STATE</field>
        <operation>equals</operation>
        <value>PA,NJ,DE,MD,DC,VA,NC,SC,TN,GA,FL,AL,MS</value>
    </filters>
    <filters>
        <field>CONTRACT.BILLING_STATE</field>
        <operation>equals</operation>
        <value>PA,NJ,DE,MD,DC,VA,NC,SC,TN,GA,FL,AL,MS</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Phil</value>
    </filters>
    <label>Matt&#39;s Active Deals 11.22.16</label>
    <language>en_US</language>
</ListView>