Perkin-UAT/force-app/main/default/objects/Contract/listViews/Phil_s_Active_Deals.listView-meta.xml
<ListView>
    <fullName>Phil_s_Active_Deals</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>SAP_Deal_Number_del__c</columns>
    <columns>eProcurement_Catalog_Type_Contracts__c</columns>
    <columns>CONTRACT.SHIPPING_STATE</columns>
    <columns>CONTRACT.BILLING_STATE</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>SAP_Deal_Status__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Annual_Revenue__c</columns>
    <columns>PA_Approve_Date__c</columns>
    <columns>Line_Items_After_Update__c</columns>
    <columns>Pac_Code_Items_After_Update__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Phil</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <filters>
        <field>SAP_Deal_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Phil&#39;s Active Deals-DO NOT DELETE</label>
    <language>en_US</language>
    <sharedTo />
</ListView>